# neo4j_db_api

./: README.md  pyproject.toml
src/app/: main.py
src/app/core/: config.py
src/app/db/: connectivity.py  neo4j_utils.py
src/app/exceptions/: __init__.py  base.py
src/app/models/: connectivity.py
src/app/routes/: connectivity.py
src/tests/: test_main.py
tests/: conftest.py  test_connectivity.py
