[project]
name = "neo4j-db-api"
version = "0.1.0"
description = "API for interacting with Neo4j database"
authors = [
    {name = "cappelchi",email = "scrivo_a_te@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "neo4j>=5.14.0",
]

[tool.poetry.group.dev.dependencies]
pytest>=8.0.0
httpx>=0.26.0  # Required for TestClient
pytest-asyncio>=0.23.5  # For async test support

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
virtualenvs.in-project = true
