[tool.poetry]
name = "neo4j-db-api"
version = "0.1.0"
description = "API for interacting with Neo4j database"
authors = ["cappelchi <scrivo_a_te@mail.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
neo4j = "^5.14.0"
pydantic-settings = "^2.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"  # Required for TestClient
pytest-asyncio = "^0.23.5"  # For async test support
pytest-cov = "^4.1.0"  # For coverage reports

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
